MGS-1193 fixed spacing in links and alignment issue

--- a/resources/scss/components/_component.notification.scss
+++ b/resources/scss/components/_component.notification.scss
@@ -156,6 +156,10 @@ $notification_padding: 14px;
     &--gold {
       line-height: 35px;
 
+      .wrapper {
+        padding: 0 14px;
+      }
+
       .notification__close {
         display: none;
       }
